Updating for java 8