@@ -1,10 +1,12 @@
 package ServiceLayer;
 
 import BusinessLayer.*;
+import Utilities.Response;
 import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
 
+import java.lang.reflect.Array;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.Month;
@@ -49,7 +51,7 @@ public class GatewayTest
     }
     @Test
     public void login() {
-        var r = g.getLoggedUser();
+        Response<Employee> r = g.getLoggedUser();
         if(!r.isSuccess()) {
             fail(r.getMessage());
         }
@@ -66,14 +68,14 @@ public class GatewayTest
     public void addEmployee()
     {
         final int NEW_EMPLOYEE_ID = 420;
-        var r = g.addEmployee(NEW_EMPLOYEE_ID, "Snoop Dog", bankAccountDetailsGenerator(NEW_EMPLOYEE_ID), 42000, LocalDateTime.now(), "Works in the morning. ");
+        Response<Employee> r = g.addEmployee(NEW_EMPLOYEE_ID, "Snoop Dog", bankAccountDetailsGenerator(NEW_EMPLOYEE_ID), 42000, LocalDateTime.now(), "Works in the morning. ");
         assertTrue(r.getMessage(), r.isSuccess());
 
-        var r2 = g.addEmployee(NEW_EMPLOYEE_ID, "Snoop Dog (Imposter)", bankAccountDetailsGenerator(NEW_EMPLOYEE_ID), 420, LocalDateTime.now(), "Works in the morning. ");
+        Response<Employee> r2 = g.addEmployee(NEW_EMPLOYEE_ID, "Snoop Dog (Imposter)", bankAccountDetailsGenerator(NEW_EMPLOYEE_ID), 420, LocalDateTime.now(), "Works in the morning. ");
         assertFalse("Employee should already exist. ", r2.isSuccess());
 
         final int NEW_EMPLOYEE_ID_2 = 7355608;
-        var r3 = g.addEmployee(NEW_EMPLOYEE_ID_2, "Shroud", bankAccountDetailsGenerator(NEW_EMPLOYEE_ID_2), 2000000, LocalDateTime.now(), "Work from home boi. ");
+        Response<Employee> r3 = g.addEmployee(NEW_EMPLOYEE_ID_2, "Shroud", bankAccountDetailsGenerator(NEW_EMPLOYEE_ID_2), 2000000, LocalDateTime.now(), "Work from home boi. ");
         assertTrue(r.getMessage(), r3.isSuccess());
     }
 
@@ -86,15 +88,15 @@ public class GatewayTest
 
         int employeeCount = g.getEmployees().getData().size();
 
-        var r = g.removeEmployee(NEW_EMPLOYEE_ID);
+        Response<Employee> r = g.removeEmployee(NEW_EMPLOYEE_ID);
         assertTrue(r.getMessage(), r.isSuccess());
 
         assertEquals("Employee count should drop by 1. ", employeeCount - 1, g.getEmployees().getData().size());
 
-        var r2 = g.removeEmployee(NEW_EMPLOYEE_ID);
+        Response<Employee> r2 = g.removeEmployee(NEW_EMPLOYEE_ID);
         assertFalse("Employee should already be removed. ", r2.isSuccess());
 
-        var r3 = g.getEmployee(NEW_EMPLOYEE_ID);
+        Response<Employee> r3 = g.getEmployee(NEW_EMPLOYEE_ID);
         assertFalse("Shouldn't be able to get a removed employee. ", r3.isSuccess());
     }
 
@@ -156,22 +158,22 @@ public class GatewayTest
         g.addEmployee(NEW_EMPLOYEE_ID, "Snoop Dog", bankAccountDetailsGenerator(NEW_EMPLOYEE_ID), 42000, LocalDateTime.now(), "Works in the morning. ");
         g.addEmployee(OTHER_EMPLOYEE_ID, "Other Otherman", bankAccountDetailsGenerator(OTHER_EMPLOYEE_ID), 999, LocalDateTime.now(), "Works every other day. ");
 
-        var r1 = g.employeeAddWorkingHour(NEW_EMPLOYEE_ID, LocalDateTime.now().plusMinutes(5), LocalDateTime.now().minusHours(2));
+        Response<TimeInterval> r1 = g.employeeAddWorkingHour(NEW_EMPLOYEE_ID, LocalDateTime.now().plusMinutes(5), LocalDateTime.now().minusHours(2));
         assertFalse("Shouldn't be able to add an illegal TimeInterval as new working hour. ", r1.isSuccess());
 
-        var r = g.employeeAddWorkingHour(NEW_EMPLOYEE_ID, LocalDateTime.now().plusDays(2), LocalDateTime.now().plusDays(3));
+        Response<TimeInterval> r = g.employeeAddWorkingHour(NEW_EMPLOYEE_ID, LocalDateTime.now().plusDays(2), LocalDateTime.now().plusDays(3));
         assertTrue(r.getMessage(), r.isSuccess());
 
-        var r2 = g.employeeAddWorkingHour(NEW_EMPLOYEE_ID, LocalDateTime.now().plusDays(2).plusHours(5), LocalDateTime.now().plusDays(2).minusHours(1));
+        Response<TimeInterval> r2 = g.employeeAddWorkingHour(NEW_EMPLOYEE_ID, LocalDateTime.now().plusDays(2).plusHours(5), LocalDateTime.now().plusDays(2).minusHours(1));
         assertFalse("Shouldn't be able to add overlapping hours. ", r2.isSuccess());
 
         g.logout();
         g.login(NEW_EMPLOYEE_ID);
 
-        var r3 = g.employeeAddWorkingHour(OTHER_EMPLOYEE_ID, LocalDateTime.now().plusDays(2), LocalDateTime.now().plusDays(3));
+        Response<TimeInterval> r3 = g.employeeAddWorkingHour(OTHER_EMPLOYEE_ID, LocalDateTime.now().plusDays(2), LocalDateTime.now().plusDays(3));
         assertFalse("Shouldn't be able to add to other employee as another non permitted employee. ", r3.isSuccess());
 
-        var r4 = g.employeeAddWorkingHour(NEW_EMPLOYEE_ID, LocalDateTime.now().plusDays(4), LocalDateTime.now().plusDays(4).plusHours(2));
+        Response<TimeInterval> r4 = g.employeeAddWorkingHour(NEW_EMPLOYEE_ID, LocalDateTime.now().plusDays(4), LocalDateTime.now().plusDays(4).plusHours(2));
         assertTrue("Should be able to add working hours for myself. " + r4.getMessage(), r4.isSuccess());
     }
 
@@ -192,10 +194,10 @@ public class GatewayTest
         g.employeeAddWorkingHour(OTHER_EMPLOYEE_ID, timeStamp.plusDays(4), timeStamp.plusDays(4).plusHours(2));
 
         g.employeeAddWorkingHour(NEW_EMPLOYEE_ID, timeStamp.plusHours(1), timeStamp.plusHours(2));
-        var r1 = g.employeeRemoveWorkingHour(NEW_EMPLOYEE_ID, timeStamp.plusHours(1));
+        Response<TimeInterval> r1 = g.employeeRemoveWorkingHour(NEW_EMPLOYEE_ID, timeStamp.plusHours(1));
         assertTrue(r1.getMessage(), r1.isSuccess());
 
-        var r2 = g.employeeRemoveWorkingHour(NEW_EMPLOYEE_ID, timeStamp.plusHours(1));
+        Response<TimeInterval> r2 = g.employeeRemoveWorkingHour(NEW_EMPLOYEE_ID, timeStamp.plusHours(1));
         assertFalse("Shouldn't be able to remove the same hour twice. ", r2.isSuccess());
 
         g.employeeAddWorkingHour(NEW_EMPLOYEE_ID, timeStamp.plusHours(1), timeStamp.plusHours(2));
@@ -203,10 +205,10 @@ public class GatewayTest
         g.logout();
         g.login(NEW_EMPLOYEE_ID);
 
-        var r3 = g.employeeRemoveWorkingHour(NEW_EMPLOYEE_ID, timeStamp.plusHours(1));
+        Response<TimeInterval> r3 = g.employeeRemoveWorkingHour(NEW_EMPLOYEE_ID, timeStamp.plusHours(1));
         assertTrue(r1.getMessage(), r1.isSuccess());
 
-        var r4 = g.employeeRemoveWorkingHour(OTHER_EMPLOYEE_ID, timeStamp.plusDays(4));
+        Response<TimeInterval> r4 = g.employeeRemoveWorkingHour(OTHER_EMPLOYEE_ID, timeStamp.plusDays(4));
         assertFalse("Shouldn't be able to remove another employee's working hours. ", r4.isSuccess());
     }
 
@@ -223,19 +225,19 @@ public class GatewayTest
         Qualification qCashier = g.getQualification("Cashier").getData();
         Qualification qHR = g.getQualification("HR").getData();
 
-        var r = g.employeeAddQualification(NEW_EMPLOYEE_ID, qCashier);
+        Response<Qualification> r = g.employeeAddQualification(NEW_EMPLOYEE_ID, qCashier);
         assertTrue(r.getMessage(), r.isSuccess());
 
-        var r1 = g.employeeAddQualification(NEW_EMPLOYEE_ID, qCashier);
+        Response<Qualification> r1 = g.employeeAddQualification(NEW_EMPLOYEE_ID, qCashier);
         assertFalse("Shouldn't be able to add the same qualification twice. ", r1.isSuccess());
 
-        var r2 = g.employeeAddQualification(NEW_EMPLOYEE_ID, qHR);
+        Response<Qualification> r2 = g.employeeAddQualification(NEW_EMPLOYEE_ID, qHR);
         assertTrue(r2.getMessage(), r2.isSuccess());
 
         g.logout();
         g.login(NEW_EMPLOYEE_ID);
 
-        var r3 = g.employeeAddQualification(OTHER_EMPLOYEE_ID, qCashier);
+        Response<Qualification> r3 = g.employeeAddQualification(OTHER_EMPLOYEE_ID, qCashier);
         assertTrue("Snoop Dog should now be HR. ", r3.isSuccess());
 
 
@@ -258,14 +260,14 @@ public class GatewayTest
         Qualification qCashier = g.getQualification("Cashier").getData();
         Qualification qHR = g.getQualification("HR").getData();
 
-        var r1 = g.employeeRemoveQualification(NEW_EMPLOYEE_ID, "Cashier");
+        Response<Qualification> r1 = g.employeeRemoveQualification(NEW_EMPLOYEE_ID, "Cashier");
         assertFalse("Employee shouldn't have the qualification yet. ", r1.isSuccess());
 
         g.employeeAddQualification(NEW_EMPLOYEE_ID, qCashier);
-        var r = g.employeeRemoveQualification(NEW_EMPLOYEE_ID, "Cashier");
+        Response<Qualification> r = g.employeeRemoveQualification(NEW_EMPLOYEE_ID, "Cashier");
         assertTrue(r.getMessage(), r.isSuccess());
 
-        var r2 = g.employeeRemoveQualification(NEW_EMPLOYEE_ID, "Cashier");
+        Response<Qualification> r2 = g.employeeRemoveQualification(NEW_EMPLOYEE_ID, "Cashier");
         assertFalse("Qualification should be removed. ", r2.isSuccess());
 
         g.employeeAddQualification(NEW_EMPLOYEE_ID, qHR);
@@ -273,10 +275,10 @@ public class GatewayTest
         g.logout();
         g.login(NEW_EMPLOYEE_ID);
 
-        var r3 = g.employeeRemoveQualification(NEW_EMPLOYEE_ID, "HR");
+        Response<Qualification> r3 = g.employeeRemoveQualification(NEW_EMPLOYEE_ID, "HR");
         assertTrue(r3.getMessage(), r3.isSuccess());
 
-        var r4 = g.employeeAddQualification(NEW_EMPLOYEE_ID, qHR);
+        Response<Qualification> r4 = g.employeeAddQualification(NEW_EMPLOYEE_ID, qHR);
         assertFalse("Employee shouldn't be HR anymore. ", r4.isSuccess());
     }
 
@@ -284,29 +286,29 @@ public class GatewayTest
     public void addShift()
     {
         final int ID_MANAGER = 1337;
-        var manager = g.addEmployee(ID_MANAGER, "Manager", bankAccountDetailsGenerator(ID_MANAGER), 42000, LocalDateTime.now(), "Branch 1 manager").getData();
-        var w1 = g.addEmployee(21, "W1", bankAccountDetailsGenerator(21), 42000, LocalDateTime.now(), "Worker 1").getData();
-        var w2 = g.addEmployee(22, "W2", bankAccountDetailsGenerator(22), 42000, LocalDateTime.now(), "Worker 2").getData();
+        Employee manager = g.addEmployee(ID_MANAGER, "Manager", bankAccountDetailsGenerator(ID_MANAGER), 42000, LocalDateTime.now(), "Branch 1 manager").getData();
+        Employee w1 = g.addEmployee(21, "W1", bankAccountDetailsGenerator(21), 42000, LocalDateTime.now(), "Worker 1").getData();
+        Employee w2 = g.addEmployee(22, "W2", bankAccountDetailsGenerator(22), 42000, LocalDateTime.now(), "Worker 2").getData();
 
         g.employeeAddQualification(manager.getId(), g.getQualification("Branch1Manager").getData());
         g.employeeAddQualification(w1.getId(), g.getQualification("Cashier").getData());
         g.employeeAddQualification(w1.getId(), g.getQualification("Cleaner").getData());
         Map<Employee, List<Qualification>> workers  = new HashMap<Employee, List<Qualification>>() {{
-            put(w1, List.of(g.getQualification("Cashier").getData()));
-            put(w2, List.of(g.getQualification("Cleaner").getData()));
+            put(w1, Arrays.asList(g.getQualification("Cashier").getData()));
+            put(w2, Arrays.asList(g.getQualification("Cleaner").getData()));
         }};
         g.logout();
         g.login(ID_MANAGER);
-        var r1 = g.addShift(1, LocalDateTime.of(2024, Month.MAY, 20, 1, 1), manager, workers, ShiftTime.DAY);
+        Response<Shift> r1 = g.addShift(1, LocalDateTime.of(2024, Month.MAY, 20, 1, 1), manager, workers, ShiftTime.DAY);
         assertTrue(r1.getMessage(), r1.isSuccess());
 
-        var r2 = g.addShift(1, LocalDateTime.of(2024, Month.MAY, 20, 2, 30), manager, workers, ShiftTime.DAY);
+        Response<Shift> r2 = g.addShift(1, LocalDateTime.of(2024, Month.MAY, 20, 2, 30), manager, workers, ShiftTime.DAY);
         assertFalse("Should not be able to create 2 shifts at the same time. ", r2.isSuccess());
 
-        var r3 = g.addShift(1, LocalDateTime.of(2024, Month.MAY, 21, 1, 1), manager, workers, ShiftTime.NIGHT);
+        Response<Shift> r3 = g.addShift(1, LocalDateTime.of(2024, Month.MAY, 21, 1, 1), manager, workers, ShiftTime.NIGHT);
         assertTrue(r3.isSuccess());
 
-        var r4 = g.addShift(1, LocalDateTime.of(1998, Month.MAY, 20, 2, 30), manager, workers, ShiftTime.NIGHT);
+        Response<Shift> r4 = g.addShift(1, LocalDateTime.of(1998, Month.MAY, 20, 2, 30), manager, workers, ShiftTime.NIGHT);
         assertFalse("Should not be able to create a shift in the past.", r4.isSuccess());
 
 
@@ -316,9 +318,9 @@ public class GatewayTest
     public void removeShift()
     {
         final int ID_MANAGER = 1337;
-        var manager = g.addEmployee(ID_MANAGER, "Manager", bankAccountDetailsGenerator(ID_MANAGER), 42000, LocalDateTime.now(), "Branch 1 manager").getData();
-        var w1 = g.addEmployee(21, "W1", bankAccountDetailsGenerator(21), 42000, LocalDateTime.now(), "Worker 1").getData();
-        var w2 = g.addEmployee(22, "W2", bankAccountDetailsGenerator(22), 42000, LocalDateTime.now(), "Worker 2").getData();
+        Employee manager = g.addEmployee(ID_MANAGER, "Manager", bankAccountDetailsGenerator(ID_MANAGER), 42000, LocalDateTime.now(), "Branch 1 manager").getData();
+        Employee w1 = g.addEmployee(21, "W1", bankAccountDetailsGenerator(21), 42000, LocalDateTime.now(), "Worker 1").getData();
+        Employee w2 = g.addEmployee(22, "W2", bankAccountDetailsGenerator(22), 42000, LocalDateTime.now(), "Worker 2").getData();
 
         g.employeeAddQualification(manager.getId(), g.getQualification("Branch1Manager").getData());
         g.employeeAddQualification(w1.getId(), g.getQualification("Cashier").getData());
@@ -331,13 +333,13 @@ public class GatewayTest
         g.login(ID_MANAGER);
         Shift s1 = g.addShift(1, LocalDateTime.of(2024, Month.MAY, 20, 1, 1), manager, workers, ShiftTime.DAY).getData();
 
-        var r1 = g.removeShift(s1.getId());
+        Response<Shift> r1 = g.removeShift(s1.getId());
         assertTrue(r1.getMessage(), r1.isSuccess());
 
-        var r2 = g.removeShift(s1.getId());
+        Response<Shift> r2 = g.removeShift(s1.getId());
         assertFalse("Shouldn't be able to remove a non existing shift.  ", r2.isSuccess());
 
-        var r3 = g.getShifts(1);
+        Response<List<Shift>> r3 = g.getShifts(1);
         assertTrue(r3.getMessage(), r3.isSuccess());
         assertEquals("The shift should be removed. ", r3.getData().size(), 0);
     }
@@ -346,13 +348,13 @@ public class GatewayTest
     public void addWorker()
     {
         final int ID_MANAGER = 1337;
-        var manager = g.addEmployee(ID_MANAGER, "Manager", bankAccountDetailsGenerator(ID_MANAGER), 42000, LocalDateTime.now(), "Branch 1 manager").getData();
-        var w1 = g.addEmployee(21, "W1", bankAccountDetailsGenerator(21), 42000, LocalDateTime.now(), "Worker 1").getData();
-        var w2 = g.addEmployee(22, "W2", bankAccountDetailsGenerator(22), 42000, LocalDateTime.now(), "Worker 2").getData();
+        Employee manager = g.addEmployee(ID_MANAGER, "Manager", bankAccountDetailsGenerator(ID_MANAGER), 42000, LocalDateTime.now(), "Branch 1 manager").getData();
+        Employee w1 = g.addEmployee(21, "W1", bankAccountDetailsGenerator(21), 42000, LocalDateTime.now(), "Worker 1").getData();
+        Employee w2 = g.addEmployee(22, "W2", bankAccountDetailsGenerator(22), 42000, LocalDateTime.now(), "Worker 2").getData();
 
         g.employeeAddQualification(manager.getId(), g.getQualification("Branch1Manager").getData());
         g.employeeAddQualification(w1.getId(), g.getQualification("Cashier").getData());
-        var qualificationCleaner = g.employeeAddQualification(w1.getId(), g.getQualification("Cleaner").getData()).getData();
+        Qualification qualificationCleaner = g.employeeAddQualification(w1.getId(), g.getQualification("Cleaner").getData()).getData();
         Map<Employee, List<Qualification>> workers  = new HashMap<Employee, List<Qualification>>() {{
             put(w1, List.of(g.getQualification("Cashier").getData()));
         }};
@@ -360,10 +362,10 @@ public class GatewayTest
         g.login(ID_MANAGER);
         Shift s1 = g.addShift(1, LocalDateTime.of(2024, Month.MAY, 20, 1, 1), manager, workers, ShiftTime.DAY).getData();
 
-        var r1 = g.addWorker(s1.getId(), w2, List.of(qualificationCleaner));
+        Response<Employee> r1 = g.addWorker(s1.getId(), w2, Arrays.asList(qualificationCleaner));
         assertTrue(r1.getMessage(), r1.isSuccess());
 
-        var r2 = s1.getWorkers().keySet();
+        Set<Employee> r2 = s1.getWorkers().keySet();
         assertEquals("There should be 2 employees after this. ", r2.size(), 2);
     }
 
@@ -371,9 +373,9 @@ public class GatewayTest
     public void removeWorker()
     {
         final int ID_MANAGER = 1337;
-        var manager = g.addEmployee(ID_MANAGER, "Manager", bankAccountDetailsGenerator(ID_MANAGER), 42000, LocalDateTime.now(), "Branch 1 manager").getData();
-        var w1 = g.addEmployee(21, "W1", bankAccountDetailsGenerator(21), 42000, LocalDateTime.now(), "Worker 1").getData();
-        var w2 = g.addEmployee(22, "W2", bankAccountDetailsGenerator(22), 42000, LocalDateTime.now(), "Worker 2").getData();
+        Employee manager = g.addEmployee(ID_MANAGER, "Manager", bankAccountDetailsGenerator(ID_MANAGER), 42000, LocalDateTime.now(), "Branch 1 manager").getData();
+        Employee w1 = g.addEmployee(21, "W1", bankAccountDetailsGenerator(21), 42000, LocalDateTime.now(), "Worker 1").getData();
+        Employee w2 = g.addEmployee(22, "W2", bankAccountDetailsGenerator(22), 42000, LocalDateTime.now(), "Worker 2").getData();
 
         g.employeeAddQualification(manager.getId(), g.getQualification("Branch1Manager").getData());
         g.employeeAddQualification(w1.getId(), g.getQualification("Cashier").getData());
@@ -386,20 +388,20 @@ public class GatewayTest
         g.login(ID_MANAGER);
         Shift s1 = g.addShift(1, LocalDateTime.of(2024, Month.MAY, 20, 1, 1), manager, workers, ShiftTime.DAY).getData();
 
-        var r1 = g.removeWorker(s1.getId(), w2);
+        Response<Employee> r1 = g.removeWorker(s1.getId(), w2);
         assertTrue(r1.getMessage(), r1.isSuccess());
 
-        var r2 = g.removeWorker(s1.getId(), w2);
+        Response<Employee> r2 = g.removeWorker(s1.getId(), w2);
         assertFalse("Employee should already be removed. ", r2.isSuccess());
 
-        var r3 = s1.getWorkers().keySet();
+        Set<Employee> r3 = s1.getWorkers().keySet();
         assertEquals("There should be 1 employees after this. ", r3.size(), 1);
     }
 
     @Test
     public void getQualifications()
     {
-        var r = g.getQualifications();
+        Response<List<Qualification>> r = g.getQualifications();
         assertTrue(r.getMessage(), r.isSuccess());
     }
 
@@ -407,20 +409,20 @@ public class GatewayTest
     public void addQualification()
     {
         final int GUEST_ID = 1800400;
-        var guest = g.addEmployee(GUEST_ID, "guest", bankAccountDetailsGenerator(1800400), 1, LocalDateTime.now(), "guest with no permissions. ").getData();
+        Employee guest = g.addEmployee(GUEST_ID, "guest", bankAccountDetailsGenerator(1800400), 1, LocalDateTime.now(), "guest with no permissions. ").getData();
 
-        var r = g.addQualification("TempQualification");
+        Response<Qualification> r = g.addQualification("TempQualification");
         assertTrue(r.getMessage(), r.isSuccess());
 
-        var r1 = g.getQualification("TempQualification");
+        Response<Qualification> r1 = g.getQualification("TempQualification");
         assertTrue(r1.getMessage(), r1.isSuccess());
 
-        var r2 = g.addQualification("TempQualification");
+        Response<Qualification> r2 = g.addQualification("TempQualification");
         assertFalse("Shouldn't be able to add the same qualification twice. ", r2.isSuccess());
 
         g.logout();
         g.login(GUEST_ID);
-        var r3 = g.addQualification("");
+        Response<Qualification> r3 = g.addQualification("");
         assertFalse("Shouldn't be able to add a new qualification as guest user. ", r3.isSuccess());
     }
 
@@ -454,17 +456,17 @@ public class GatewayTest
     public void addPermission()
     {
         final int GUEST_ID = 1800400;
-        var guest = g.addEmployee(GUEST_ID, "guest", bankAccountDetailsGenerator(1800400), 1, LocalDateTime.now(), "guest with no permissions. ").getData();
+        Employee guest = g.addEmployee(GUEST_ID, "guest", bankAccountDetailsGenerator(1800400), 1, LocalDateTime.now(), "guest with no permissions. ").getData();
 
-        var r = g.addPermission("TempPermission");
+        Response<Permission> r = g.addPermission("TempPermission");
         assertTrue(r.getMessage(), r.isSuccess());
 
-        var r2 = g.addPermission("TempPermission");
+        Response<Permission> r2 = g.addPermission("TempPermission");
         assertFalse("Shouldn't be able to add the same permission twice. ", r2.isSuccess());
 
         g.logout();
         g.login(GUEST_ID);
-        var r3 = g.addPermission("");
+        Response<Permission> r3 = g.addPermission("");
         assertFalse("Shouldn't be able to add a new permission as guest user. ", r3.isSuccess());
     }
 
@@ -472,23 +474,23 @@ public class GatewayTest
     public void removePermission()
     {
         final int GUEST_ID = 1800400;
-        var guest = g.addEmployee(GUEST_ID, "guest", bankAccountDetailsGenerator(1800400), 1, LocalDateTime.now(), "guest with no permissions. ").getData();
+        Employee guest = g.addEmployee(GUEST_ID, "guest", bankAccountDetailsGenerator(1800400), 1, LocalDateTime.now(), "guest with no permissions. ").getData();
 
         g.addPermission("TempPermission");
         int permCount = g.getPermissions().getData().size();
 
-        var r = g.removePermission("TempPermission");
+        Response<Permission> r = g.removePermission("TempPermission");
         assertTrue(r.getMessage(), r.isSuccess());
 
         // check that the permission has indeed been removed.
         assertEquals("Expected the permission count to be smaller. ", g.getPermissions().getData().size(), (permCount - 1));
 
-        var r2 = g.removePermission("TempPermission");
+        Response<Permission> r2 = g.removePermission("TempPermission");
         assertFalse("Shouldn't be able to remove the same permission twice. ", r2.isSuccess());
 
         g.logout();
         g.login(GUEST_ID);
-        var r3 = g.addPermission("");
+        Response<Permission> r3 = g.addPermission("");
         assertFalse("Shouldn't be able to remove a permission as guest user. ", r3.isSuccess());
     }
 
@@ -498,10 +500,10 @@ public class GatewayTest
         g.addPermission("TempPermission");
         g.addQualification("TempQualification");
 
-        var r = g.addPermissionToQualification("TempPermission", "TempQualification");
+        Response<Qualification> r = g.addPermissionToQualification("TempPermission", "TempQualification");
         assertTrue(r.getMessage(), r.isSuccess());
 
-        var r2 = g.addPermissionToQualification("TempPermission", "TempQualification");
+        Response<Qualification> r2 = g.addPermissionToQualification("TempPermission", "TempQualification");
         assertFalse("Should not be able to add the same permission to a qualification twice. ", r2.isSuccess());
     }
 
@@ -513,10 +515,10 @@ public class GatewayTest
 
         g.addPermissionToQualification("TempPermission", "TempQualification");
 
-        var r = g.removePermissionFromQualification("TempPermission", "TempQualification");
+        Response<Qualification> r = g.removePermissionFromQualification("TempPermission", "TempQualification");
         assertTrue(r.getMessage(), r.isSuccess());
 
-        var r2 = g.removePermissionFromQualification("TempPermission", "TempQualification");
+        Response<Qualification> r2 = g.removePermissionFromQualification("TempPermission", "TempQualification");
         assertFalse("Should not be able to remove the same permission from a qualification twice. ", r2.isSuccess());
     }
 }
